# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml  t1.json
.github/workflows/: PyCI.yml  hexlet-check.yml
gendiff/: __init__.py  cli.py  formatter.py  gendiff.py  get_data.py  get_tree_diff.py  parse_arguments.py
gendiff/formatters/: format_diff.py  formater.py  helper.py  json.py  plain.py  sort_diff_keys.py  stylish.py
gendiff/get_data/: get_data.py
gendiff/helpers/: format.py
gendiff/scripts/: main.py
gendiff/tests/: helpers.py  test_gendiff.py  test_gendiff_recursive.py  test_gendiff_simple.py  test_generate_diff.py  test_get_data.py  test_get_diff.py
gendiff/tests/fixtures/formats/: recursive_json.json  recursive_json.txt  simple_json.json  simple_plain.txt
gendiff/tests/fixtures/yaml/: rest_gendiff.py
tests/: conftest.py  helpers.py  test_gendiff_json.py  test_gendiff_recursive.py  test_gendiff_simple.py  test_gendiff_stylish_and_plain.py  test_generate_diff.py  test_get_data.py  test_get_diff.py
tests/fixtures/: path_files.py
tests/fixtures/complex/: after.json  complex_json.json
tests/fixtures/simple/: after.json  after.yaml  before.json  before.yaml  bool_and_null_in_keys.json  bool_and_null_in_keys_result.txt  simple_json.json  simple_plain.txt  simple_stylish.txt
