[tool.poetry]
name = "hexlet_code"
version = "0.1.0"
description = ""
authors = ["Daria <kharitonovadari@gmail.com>"]
packages = [
    { include = "gendiff" },
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.main:main"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
