[tool.poetry]
name = "hexlet-code"
version = "0.1.2"
description = "The training project on the Python Development"
authors = ["Daria Kharitonova <kharitonovadari@gmail.com>"]
packages = [
    { include = "gendiff" },
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.main:main"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
codeclimate-test-reporter = "^0.2.3"
PyYaml = "^5.3.1"
coverage = "^5.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
