[tool.poetry]
name = "hexlet-code"
version = "0.1.3"
description = "The training project on the Python Development"
authors = ["Daria Kharitonova <kharitonovadari@gmail.com>"]
packages = [
    { include = "gendiff" },
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.main:main"

[tool.poetry.dependencies]
python = "^3.8"
PyYaml = "^5.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
codeclimate-test-reporter = "^0.2.3"
coverage = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
